Fix inversed media queryes on add  +/- signs on mobile to right panel on galleries

--- a/resources/static/css/gallery.css
+++ b/resources/static/css/gallery.css
@@ -48,7 +48,12 @@
   padding-top:5px !important;
 
 }
-
+.gallerysidebar #sidetoggle:before{
+  content:"+";
+}
+.gallerysidebar:hover #sidetoggle:before{
+  content:"-";
+}
 .gallerysidebar #sidetoggle{
   visibility:visible;
   display:block;
@@ -517,7 +522,7 @@ div#category_desc {
   content:"+";
 }
 .gallerysidebar:hover #sidetoggle:before{
-  content:"-";
+  content:"+";
 }
 .page.gallery .galleryitem  a.link > img,
 .page.gallery    a.link > .galleryitem > img {
